# vmail

./: .env-template  LICENSE  README.md  __init__.py  __main__.py  _smtp_config.py  main.py  multi_media_mail.py  plain_text_mail.py  pyproject.toml  requirements.txt
html_template/: index-template.html  table.html
src/vmail/: multi_media_mail.py  plain_text_mail.py
src/vmail/html_template/: body.html
