[project]
name = "vmail"
version = "v1.0.0"
authors = [
  { name="echo404", email="vp@668168.xyz" },
]
description = "A lazy email client"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/668168/vmail"
"Bug Tracker" = "https://github.com/668168/vmail/issues"